--- a/RestoApp/RestoApp2/Content/bootstrap.css
+++ b/RestoApp/RestoApp2/Content/bootstrap.css
@@ -60,8 +60,6 @@ a {
 abbr[title] {
     border-bottom: none;
     text-decoration: underline;
-    -webkit-text-decoration: underline dotted;
-    -moz-text-decoration: underline dotted;
     text-decoration: underline dotted;
 }
 
@@ -3283,7 +3281,6 @@ input[type="search"] {
     box-sizing: border-box;
     -webkit-appearance: none;
     -moz-appearance: none;
-    appearance: none;
 }
 
 input[type="radio"],
@@ -3906,7 +3903,6 @@ select[multiple].input-lg {
     .btn[disabled],
     fieldset[disabled] .btn {
         cursor: not-allowed;
-        filter: alpha(opacity=65);
         opacity: 0.65;
         -webkit-box-shadow: none;
         box-shadow: none;
@@ -4489,7 +4485,6 @@ tbody.collapse.in {
             cursor: not-allowed;
             background-color: transparent;
             background-image: none;
-            filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
         }
 
 .open > .dropdown-menu {
@@ -6376,7 +6371,6 @@ a.thumbnail.active {
     background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
     background-image: -o-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
     background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
-    -webkit-background-size: 40px 40px;
     background-size: 40px 40px;
 }
 
@@ -7205,7 +7199,6 @@ button.list-group-item-danger {
     line-height: 1;
     color: #000;
     text-shadow: 0 1px 0 #fff;
-    filter: alpha(opacity=20);
     opacity: 0.2;
 }
 
@@ -7214,7 +7207,6 @@ button.list-group-item-danger {
         color: #000;
         text-decoration: none;
         cursor: pointer;
-        filter: alpha(opacity=50);
         opacity: 0.5;
     }
 
@@ -7225,7 +7217,6 @@ button.close {
     border: 0;
     -webkit-appearance: none;
     -moz-appearance: none;
-    appearance: none;
 }
 
 .modal-open {
@@ -7298,12 +7289,10 @@ button.close {
 }
 
     .modal-backdrop.fade {
-        filter: alpha(opacity=0);
         opacity: 0;
     }
 
     .modal-backdrop.in {
-        filter: alpha(opacity=50);
         opacity: 0.5;
     }
 
@@ -7395,12 +7384,10 @@ button.close {
     word-wrap: normal;
     white-space: normal;
     font-size: 12px;
-    filter: alpha(opacity=0);
     opacity: 0;
 }
 
     .tooltip.in {
-        filter: alpha(opacity=90);
         opacity: 0.9;
     }
 
@@ -7762,7 +7749,6 @@ button.close {
     text-align: center;
     text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
     background-color: rgba(0, 0, 0, 0);
-    filter: alpha(opacity=50);
     opacity: 0.5;
 }
 
@@ -7771,7 +7757,6 @@ button.close {
         background-image: -o-linear-gradient(left, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.0001) 100%);
         background-image: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.0001)));
         background-image: linear-gradient(to right, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.0001) 100%);
-        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#80000000', endColorstr='#00000000', GradientType=1);
         background-repeat: repeat-x;
     }
 
@@ -7782,7 +7767,6 @@ button.close {
         background-image: -o-linear-gradient(left, rgba(0, 0, 0, 0.0001) 0%, rgba(0, 0, 0, 0.5) 100%);
         background-image: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, 0.0001)), to(rgba(0, 0, 0, 0.5)));
         background-image: linear-gradient(to right, rgba(0, 0, 0, 0.0001) 0%, rgba(0, 0, 0, 0.5) 100%);
-        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00000000', endColorstr='#80000000', GradientType=1);
         background-repeat: repeat-x;
     }
 
@@ -7791,7 +7775,6 @@ button.close {
         color: #fff;
         text-decoration: none;
         outline: 0;
-        filter: alpha(opacity=90);
         opacity: 0.9;
     }
 
@@ -8392,7 +8375,6 @@ mesa-img {
     -ms-transform: rotate(-7deg) scale(1.33);
     transform: rotate(-7deg) scale(1.33);
     border: 2px solid #2a2a72;
-    
 }
 
 
@@ -8652,6 +8634,8 @@ mesa-img {
     }
 }
 
+
+
 .user-list {
     background: #fff;
     border: 2px solid #000;
@@ -8671,6 +8655,7 @@ body {
     border-bottom: 4px solid #000;
 }
 
+
 .jumbotron {
     background: #232528;
     border-bottom: 4px solid #000;
@@ -8680,7 +8665,7 @@ body {
     width: 100%;
     height: 30%;
     left: 0;
-    z-index: 4;
+    z-index: 10;
 }
 
 .contenido {
@@ -8692,25 +8677,23 @@ body {
     position: absolute;
     height: 80px;
     width: 140px;
-    z-index: 4;
+    z-index: 1;
     background-size: cover;
     border: 2px solid #000;
 }
 
 .img-item-vacio {
-    width: 135px;
+    width: 120px;
 }
 
 .url {
-    position: absolute;
     z-index: 4;
     margin-left: 5px;
     margin-top: -4px;
-    width: 200%;
 }
 
 .item-mesa {
-    background-size: cover;
+    object-fit: cover;
     border: 2px solid #000;
     width: 60px;
     height: 30px;
